hphp/hack/test/typecheck/iface_require_incompat5.php.exp
File "iface_require_incompat5.php", line 10, characters 41-42:
Unable to satisfy trait/interface requirement (Typing[4110])
  File "iface_require_incompat5.php", line 6, characters 25-27:
  Expected `int`
  File "iface_require_incompat5.php", line 6, characters 25-27:
  This type argument to `Super` must match exactly (it is invariant)
  File "iface_require_incompat5.php", line 10, characters 25-27:
  But got `num`
File "iface_require_incompat5.php", line 10, characters 41-42:
Unable to satisfy trait/interface requirement (Typing[4110])
  File "iface_require_incompat5.php", line 7, characters 25-29:
  Expected `float`
  File "iface_require_incompat5.php", line 7, characters 25-29:
  This type argument to `Super` must match exactly (it is invariant)
  File "iface_require_incompat5.php", line 10, characters 25-27:
  But got `num`
